k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-app-laravel-service
spec:
  selector:
    app: meu-app-laravel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
