k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meu-app-laravel-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: meu-app-laravel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meu-app-laravel-service
                port:
                  number: 80
